--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <p>
             &nbsp;
           </p>
-          &nbsp; &nbsp;<a href="our-story.html" class="btn-learn-more">Learn More</a>
+          &nbsp; &nbsp;<a href="experience.html" class="btn-learn-more">Learn More</a>
           </div>
         </div>
 
