--- a/index.html
+++ b/index.html
@@ -59,18 +59,19 @@
 </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero">
+
+  <!-- <section id="hero">
     <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
       <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
 
       <div class="carousel-inner" role="listbox">
 
-        <!-- Slide 1 -->
+        Slide 1
         <div class="carousel-item active" style="background-image: url(assets/img/slide/kevin1.jpg)">
         </div>
 
-        <!-- Slide 2 -->
+         Slide 2 
         <div class="carousel-item" style="background-image: url(assets/img/slide/kevin2.jpg)">
         </div>
 
@@ -85,7 +86,9 @@
       </a>
 
     </div>
-  </section><!-- End Hero -->
+  </section> -->
+  
+  <!-- End Hero -->
  
   <main id="main">
 
@@ -144,7 +147,9 @@
     </section><!-- End Features Section -->
 
     <!-- ======= Recent Photos Section ======= -->
-    <section id="recent-photos" class="recent-photos">
+
+
+    <!-- <section id="recent-photos" class="recent-photos">
       <div class="container">
 
         <div class="section-title">
@@ -165,7 +170,9 @@
         </div>
 
       </div>
-    </section><!-- End Recent Photos Section -->
+    </section> -->
+    
+    <!-- End Recent Photos Section -->
 
   </main><!-- End #main -->
 
