--- a/resume.html
+++ b/resume.html
@@ -77,145 +77,25 @@
       </div>
     </section><!-- End Breadcrumbs -->
 
-    <!-- ======= Gallery Section ======= -->
-<!--     <section id="gallery" class="gallery">
+    <section id="resumeSec" class="res">
       <div class="container">
 
-        <div class="row">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="gallery-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-home">Home</li>
-              <li data-filter=".filter-beach">Beach</li>
-              <li data-filter=".filter-vacation">Vacation</li>
-            </ul>
+        <div class="temp1">
+  
+          <div class="resume">
+            <h5 class="course-title">To be updated.</h5>
+            <!-- <p class="coursename"><strong>CS224.</strong> Foundations of Computer Science</p>
+            <p class="coursename"><strong>CS253.</strong> Data Structures and Algorithms</p>
+            <p class="coursename"><strong>CPLT101.</strong> Rhetorical Composition/Critical Reading</p>
+            <p class="coursename"><strong>MATH190.</strong> Freshman Seminar: Math</p>
+            <p class="coursename"><strong>QTM110.</strong> Introduction to Scentific Methods</p>
+            <p class="coursename"><strong>QTM150.</strong> Introduction to Statistical Computing I</p> -->
           </div>
-        </div>
-
-        <div class="row gallery-container">
-
-          <div class="col-lg-4 col-md-6 gallery-item filter-home">
-            <div class="gallery-wrap">
-              <img src="assets/img/gallery/home-1.jpg" class="img-fluid" alt="">
-              <div class="gallery-info">
-                <h4>Home 1</h4>
-                <p>Home</p>
-                <div class="gallery-links">
-                  <a href="assets/img/gallery/home-1.jpg" class="glightbox" title="Home 1"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 gallery-item filter-vacation">
-            <div class="gallery-wrap">
-              <img src="assets/img/gallery/vacation-2.jpg" class="img-fluid" alt="">
-              <div class="gallery-info">
-                <h4>Vacation 2</h4>
-                <p>Vacation</p>
-                <div class="gallery-links">
-                  <a href="assets/img/gallery/vacation-2.jpg" class="glightbox" title="Vacation 2"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 gallery-item filter-home">
-            <div class="gallery-wrap">
-              <img src="assets/img/gallery/home-2.jpg" class="img-fluid" alt="">
-              <div class="gallery-info">
-                <h4>Home 2</h4>
-                <p>Home</p>
-                <div class="gallery-links">
-                  <a href="assets/img/gallery/home-2.jpg" class="glightbox" title="Home 2"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 gallery-item filter-beach">
-            <div class="gallery-wrap">
-              <img src="assets/img/gallery/beach-2.jpg" class="img-fluid" alt="">
-              <div class="gallery-info">
-                <h4>Beach 2</h4>
-                <p>Beach</p>
-                <div class="gallery-links">
-                  <a href="assets/img/gallery/beach-2.jpg" class="glightbox" title="Beach 2"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 gallery-item filter-vacation">
-            <div class="gallery-wrap">
-              <img src="assets/img/gallery/vacation-1.jpg" class="img-fluid" alt="">
-              <div class="gallery-info">
-                <h4>Vacation 1</h4>
-                <p>Vacation</p>
-                <div class="gallery-links">
-                  <a href="assets/img/gallery/vacation-1.jpg" class="glightbox" title="Vacation 1"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 gallery-item filter-home">
-            <div class="gallery-wrap">
-              <img src="assets/img/gallery/home-3.jpg" class="img-fluid" alt="">
-              <div class="gallery-info">
-                <h4>Home 3</h4>
-                <p>Home</p>
-                <div class="gallery-links">
-                  <a href="assets/img/gallery/home-3.jpg" class="glightbox" title="Home 3"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 gallery-item filter-beach">
-            <div class="gallery-wrap">
-              <img src="assets/img/gallery/beach-1.jpg" class="img-fluid" alt="">
-              <div class="gallery-info">
-                <h4>Beach 1</h4>
-                <p>Beach</p>
-                <div class="gallery-links">
-                  <a href="assets/img/gallery/beach-1.jpg" class="glightbox" title="Beach 1"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 gallery-item filter-beach">
-            <div class="gallery-wrap">
-              <img src="assets/img/gallery/beach-3.jpg" class="img-fluid" alt="">
-              <div class="gallery-info">
-                <h4>Beach 3</h4>
-                <p>Beach</p>
-                <div class="gallery-links">
-                  <a href="assets/img/gallery/beach-3.jpg" class="glightbox" title="Beach 3"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 gallery-item filter-vacation">
-            <div class="gallery-wrap">
-              <img src="assets/img/gallery/vacation-3.jpg" class="img-fluid" alt="">
-              <div class="gallery-info">
-                <h4>Vacation 3</h4>
-                <p>Vacation</p>
-                <div class="gallery-links">
-                  <a href="assets/img/gallery/vacation-3.jpg" class="glightbox" title="Vacation 3"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
+          
         </div>
 
       </div>
-    </section> -->
-    <!-- End Gallery Section -->
+    </section> 
 
   </main><!-- End #main -->
 
