updated on Jun 15th

--- a/courses.html
+++ b/courses.html
@@ -116,8 +116,18 @@
       <div class="container">
 
         <div class="row">
+
+          <div class="course-fall22">
+            <h5 class="course-title">Fall 2022</h5>
+            <p class="coursename"><strong>CS326.</strong> Analysis of Algorithms</p>
+            <p class="coursename"><strong>CS255.</strong> Computer Architecture/Machine Level Programming</p>
+            <p class="coursename"><strong>CS334.</strong> Machine Learning</p>
+            <p class="coursename"><strong>ENGRD221RW.</strong> Advanced Writing Workshop</p>
+            <p class="coursename"><strong>Math212.</strong> Differential Equations</p>
+            <p class="coursename"><strong>QTM151.</strong> Introduction to Statistical Computing II</p>
+          </div>
   
-          <div class="course-body1">
+          <div class="course-spring22">
             <h5 class="course-title">Spring 2022</h5>
             <p class="coursename"><strong>CS224.</strong> Foundations of Computer Science</p>
             <p class="coursename"><strong>CS253.</strong> Data Structures and Algorithms</p>
@@ -129,7 +139,7 @@
 
 
 
-            <div class="course-body2">
+            <div class="course-fall21">
               <h5 class="course-title">Fall 2021</h5>
               
               <p class="coursename"><strong>CS171.</strong> Introduction to Computer Science II</p>
