Updated Home Picture

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <img src="assets/img/YEARBOOKPIC.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Rex_Zhang.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
 
