--- a/courses.html
+++ b/courses.html
@@ -117,10 +117,21 @@
 
         <div class="row">
 
+          <div class="course-spring23">
+            <h5 class="course-title">Spring 2023</h5>
+            <p class="coursename"><strong>MATH211.</strong> Advanced Calculus (Multivariable)</p>
+            <p class="coursename"><strong>AAS303.</strong> Black Music</p>
+            <p class="coursename"><strong>CS370.</strong> Computer Science Practicum</p>
+            <p class="coursename"><strong>CS377.</strong> Database Systems</p>
+            <p class="coursename"><strong>Math250.</strong> Foundations of Mathematics</p>
+            <p class="coursename"><strong>WGS205W.</strong> Intro Study in Sexualities</p>
+          </div>
+  
+          
+
           <div class="course-fall22">
             <h5 class="course-title">Fall 2022</h5>
             <p class="coursename"><strong>CS326.</strong> Analysis of Algorithms</p>
-            <p class="coursename"><strong>CS255.</strong> Computer Architecture/Machine Level Programming</p>
             <p class="coursename"><strong>CS334.</strong> Machine Learning</p>
             <p class="coursename"><strong>ENGRD221RW.</strong> Advanced Writing Workshop</p>
             <p class="coursename"><strong>Math212.</strong> Differential Equations</p>
