--- a/experience.html
+++ b/experience.html
@@ -184,7 +184,7 @@
         <div class="temp1">
   
           <div class="resume">
-            <h5 class="course-title">To be updated. Rex loves Vicki</h5>
+            <h5 class="course-title">To be updated. </h5>
             <!-- <p class="coursename"><strong>CS224.</strong> Foundations of Computer Science</p>
             <p class="coursename"><strong>CS253.</strong> Data Structures and Algorithms</p>
             <p class="coursename"><strong>CPLT101.</strong> Rhetorical Composition/Critical Reading</p>
