added projects, updated courses, self-intro

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Contact - Rex Zhang</title>
+  <title> Contact - Yuxi (Rex) Zhang</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -48,9 +48,9 @@
     <nav id="navbar" class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="experience.html">Experience</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a href="courses.html">Courses</a></li>
-        <li><a href="resume.html">Resume</a></li>
+        <!-- <li><a href="resume.html">Resume</a></li> -->
         <li><a class="active" href="contact.html">Contact</a></li>
 
       </ul>
