--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@
     <nav id="navbar" class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="experience.html">Experience</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a href="courses.html">Courses</a></li>
         <li><a class="active" href="resume.html">Resume</a></li>
 
