--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="courses.html">Courses</a></li>
-        <li><a href="contactme.html">ContactMEEEE</a></li>
+        <!-- <li><a href="contactme.html">ContactMEEEE</a></li> -->
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
@@ -82,7 +82,7 @@
               Hi there! My name is Rex Zhang and I am a third-year undergraduate student at Emory University 
               double-majoring in Computer Science and Ecomonics/Mathematics. During my time at Emory so far, 
               I've been active in many student organizations. Most notably, I co-founded TAMID Group Technology Track at 
-              Emory dedicated to helping Israeli Tech startups. Now, I'm also part of Professor. Carl Yang's brain neural network BrainGB project.
+              Emory dedicated to helping Israeli Tech startups. Now, I'm also part of Dr. Carl Yang's brain neural network BrainGB project.
             </p>
 
             <p>
@@ -96,7 +96,7 @@
             </ul>
 
             <p>
-              In my free time, I enjoy traveling, playing the piano, lifting weights, and editing photos and videos.
+              In my free time, I enjoy traveling, lifting weights, playing the piano, and editing photos and videos.
             </p>
         
             <p>
