updated css and index

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <p>
               Hi there! My name is Rex Zhang and I'm a third-year undergraduate student at Emory University 
-              double-majoring in Computer Science and Ecomonics/Mathematics. During my time at Emory so far, 
+              double-majoring in Computer Science, Economics, and Mathematics. During my time at Emory so far, 
               I've been active in many student organizations. Most notably, I co-founded TAMID Group Technology Track at 
               Emory dedicated to helping Israeli Tech startups. Now, I'm also part of Dr. Carl Yang's brain neural network BrainGB project.
             </p>
