Updates on Oct29

--- a/courses.html
+++ b/courses.html
@@ -86,20 +86,30 @@
             <i>[TA]</i> represents courses for which I was a Teaching Assistant for.
           </p>
 
+          <div class="course-spring24">
+            <h5 class="course-title">Spring 2024</h5>
+            <p class="coursename"><strong>CS385.</strong> AI entrepreneurship</p>
+            <p class="coursename"><strong>CS370.</strong> Computer Science Practicum</p>
+            <p class="coursename"><strong>CS470.</strong> Data Mining</p>
+            <p class="coursename"><strong>ECON201.</strong> Intermediate Microeconomics</p>
+            <p class="coursename"><strong>ECON320.</strong> Econometrics</p>
+            <p class="coursename"><strong>ECON333.</strong> Financial Economics</p>
+          </div>
+
           <div class="course-fall23">
             <h5 class="course-title">Fall 2023</h5>
-            <p class="coursename"><strong>CS325.</strong> Artificial Intelligence</p>
             <p class="coursename"><strong>CS255.</strong> Computer Architecture/Machine Level Programming</p>
+            <p class="coursename"><strong>CS325.</strong> Artificial Intelligence</p>
+            <p class="coursename"><strong>CS485.</strong> Human AI Interaction</p>
             <p class="coursename"><strong>MATH211.</strong> Advanced Calculus (Multivariable)</p>
             <p class="coursename"><strong>ECON112.</strong> Principles of Macroeconomics</p>
             <p class="coursename"><strong>ECON220.</strong> Probability and Statistics for Economists</p>
-            <p class="coursename"><strong><i>[TA]</i> CS211.</strong> Intro to Artificial Intelligence</p>
           </div>
 
           <div class="course-spring23">
             <h5 class="course-title">Spring 2023</h5>
-            <p class="coursename"><strong>AAS303.</strong> Black Music</p>
             <p class="coursename"><strong>CS377.</strong> Database Systems</p>
+            <p class="coursename"><strong>AAS303.</strong> Black Music</p>
             <p class="coursename"><strong>Math250.</strong> Foundations of Mathematics</p>
             <p class="coursename"><strong>WGS205W.</strong> Intro Study in Sexualities</p>
             <p class="coursename"><strong>DANC123R.</strong> Contemporary Modern Dance I</p>
@@ -135,7 +145,7 @@
               
               <p class="coursename"><strong>CS171.</strong> Introduction to Computer Science II</p>
               <p class="coursename"><strong>MATH221.</strong>  Linear Algebra</p>
-              <p class="coursename"><strong>CHEM202Z.</strong> Principles of Reactivity</p>
+              <p class="coursename"><strong>CHEM202Z.</strong> Principles of Reactivity (Organic Chemistry)</p>
               <p class="coursename"><strong>CHEM202ZL.</strong>  Principles of Reactivity Lab</p>
               <p class="coursename"><strong>ECON101.</strong> Principles of Microeconomics</p>
 
@@ -161,7 +171,7 @@
 
     </div>
     <div class="copyright">
-      &copy; Copyright <strong><span>Yuxi (Rex) Zhang</span></strong>. All Rights Reserved
+      &copy; 2024 <strong><span>Yuxi (Rex) Zhang</span></strong>. All Rights Reserved
     </div>
     <div class="credits">
       <!-- All the links in the footer should remain intact. -->
