--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <img src="assets/img/Rex_Zhang.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profilepic.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
 
@@ -81,20 +81,21 @@
 
 
             <p>
-              Hi there! My name is Rex Zhang and I'm a third-year undergraduate student at Emory University 
-              double-majoring in Computer Science, Economics, and Mathematics. During my time at Emory so far, 
-              I've been active in many student organizations. Most notably, I co-founded TAMID Group Technology Track at 
-              Emory dedicated to helping Israeli Tech startups. Now, I'm also part of Dr. Carl Yang's brain neural network BrainGB project.
+              My name is Rex Zhang and I'm a third-year undergraduate student at Emory University 
+              double-majoring in Computer Science and Economics/Mathematics. During my time at Emory so far, 
+              I've been active in many student organizations. Most notably, I co-founded TAMID Group Technology Consulting Track at 
+              Emory dedicated to supporting Israeli Tech startups. Currently, I am engaged in the BrainGB project, led by Dr. Carl Yang, 
+              which explores brain neural networks. For Summer 2024, I will be joining Deutsche Bank at their Cary, NC office as a Technology Analyst Intern.
             </p>
 
             <p>
-              My programming skills include:
+              In my past courses and projects, I've had experience with: 
             </p>
             <ul>
               
-              <li><span class="iconify" data-icon="carbon:skill-level-advanced" style="color: dodgerblue;" data-width="19" data-height="19"></span> &nbsp; Python, Java, SQL, HTML/CSS, LateX</li>
-              <li><span class="iconify" data-icon="carbon:skill-level-intermediate" style="color: dodgerblue;" data-width="19" data-height="19"></span> &nbsp; JavaScript, JDBC, React.js, R</li>
-              <li><span class="iconify" data-icon="carbon:skill-level-basic" style="color: dodgerblue;" data-width="19" data-height="19"></span> &nbsp; C </li>
+              <li><span class="iconify" data-icon="carbon:skill-level-advanced" style="color: dodgerblue;" data-width="19" data-height="19"></span> &nbsp; Python(Numpy, Pandas, Seaborn, Sklearn), Java, SQL, HTML/CSS, LateX</li>
+              <li><span class="iconify" data-icon="carbon:skill-level-intermediate" style="color: dodgerblue;" data-width="19" data-height="19"></span> &nbsp; JavaScript, React.js, Google Cloud, C, JDBC, R</li>
+              <li><span class="iconify" data-icon="carbon:skill-level-basic" style="color: dodgerblue;" data-width="19" data-height="19"></span> &nbsp; TypeScript </li>
             </ul>
 
             <p>
@@ -145,7 +146,7 @@
 
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Yuxi (Rex) Zhang</span></strong>. All Rights Reserved
+        &copy; 2024 <strong><span>Yuxi (Rex) Zhang</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
