--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
 
     </div>
     <div class="copyright">
-      &copy; Copyright <strong><span>Yuxi (Rex) Zhang</span></strong>. All Rights Reserved
+      &copy; 2024 <strong><span>Yuxi (Rex) Zhang</span></strong>. All Rights Reserved
     </div>
     <div class="credits">
       <!-- All the links in the footer should remain intact. -->
