--- a/projects.html
+++ b/projects.html
@@ -84,6 +84,7 @@
 
           <div class="course-fall23">
             <h5 class="course-title">2023</h5>
+            <p class="coursename"><a href="https://github.com/rexzhang123/CoD_OpenAI"><u>Chain of Density Prompting with OpenAI API</u></a></p>
             <p class="coursename"><a href="https://covid19.emory.edu/decision-aid/about"><u>COVID-19 Vaccine Decision Aid</u></a></p>
             <p class="coursename"><a href="https://github.com/rexzhang123/Weelrn"><u>Weelrn Google Classroom API</u></a></p>
           </div>
@@ -125,7 +126,7 @@
 
     </div>
     <div class="copyright">
-      &copy; Copyright <strong><span>Yuxi (Rex) Zhang</span></strong>. All Rights Reserved
+      &copy; 2024 <strong><span>Yuxi (Rex) Zhang</span></strong>. All Rights Reserved
     </div>
     <div class="credits">
       <!-- All the links in the footer should remain intact. -->
