--- a/courses.html
+++ b/courses.html
@@ -88,7 +88,7 @@
 
           <div class="course-spring24">
             <h5 class="course-title">Spring 2024</h5>
-            <p class="coursename"><strong>CS385.</strong> AI entrepreneurship</p>
+            <p class="coursename"><strong>CS385.</strong> AI Entrepreneurship</p>
             <p class="coursename"><strong>CS370.</strong> Computer Science Practicum</p>
             <p class="coursename"><strong>CS470.</strong> Data Mining</p>
             <p class="coursename"><strong>ECON201.</strong> Intermediate Microeconomics</p>
@@ -101,7 +101,7 @@
             <p class="coursename"><strong>CS255.</strong> Computer Architecture/Machine Level Programming</p>
             <p class="coursename"><strong>CS325.</strong> Artificial Intelligence</p>
             <p class="coursename"><strong>CS485.</strong> Human AI Interaction</p>
-            <p class="coursename"><strong>MATH211.</strong> Advanced Calculus (Multivariable)</p>
+            <p class="coursename"><strong>MATH211.</strong> Multivariable Calculus</p>
             <p class="coursename"><strong>ECON112.</strong> Principles of Macroeconomics</p>
             <p class="coursename"><strong>ECON220.</strong> Probability and Statistics for Economists</p>
           </div>
