--- a/projects.html
+++ b/projects.html
@@ -84,6 +84,8 @@
 
           <div class="course-fall23">
             <h5 class="course-title">2023</h5>
+            <p class="coursename"><a href="https://github.com/rexzhang123/GPT4-Text-Enhancer"><u>GPT4-Powered Writing Wizard</u></a></p>
+            <p class="coursename"><a href="https://github.com/rexzhang123/Synthetic_Data_Generation"><u>Synthetic Data Generation for LLM Training</u></a></p>
             <p class="coursename"><a href="https://github.com/rexzhang123/CoD_OpenAI"><u>Chain of Density Prompting with OpenAI API</u></a></p>
             <p class="coursename"><a href="https://covid19.emory.edu/decision-aid/about"><u>COVID-19 Vaccine Decision Aid</u></a></p>
             <p class="coursename"><a href="https://github.com/rexzhang123/Weelrn"><u>Weelrn Google Classroom API</u></a></p>
