--- a/courses.html
+++ b/courses.html
@@ -86,17 +86,26 @@
             <i>[TA]</i> represents courses for which I was a Teaching Assistant for.
           </p>
 
-          <div class="course-spring24">
-            <h5 class="course-title">Spring 2024</h5>
-            <p class="coursename"><strong>CS385.</strong> AI Entrepreneurship</p>
+          <!-- <div class="Courses">
+            <h5 class="course-title">Fall 2024</h5>
+            <p class="coursename"><strong>.</strong> AI Entrepreneurship</p>
             <p class="coursename"><strong>CS370.</strong> Computer Science Practicum</p>
             <p class="coursename"><strong>CS470.</strong> Data Mining</p>
             <p class="coursename"><strong>ECON201.</strong> Intermediate Microeconomics</p>
             <p class="coursename"><strong>ECON320.</strong> Econometrics</p>
             <p class="coursename"><strong>ECON333.</strong> Financial Economics</p>
+          </div> -->
+
+          <div class="Courses">
+            <h5 class="course-title">Spring 2024</h5>
+            <p class="coursename"><strong>CS385.</strong> AI Entrepreneurship</p>
+            <p class="coursename"><strong>CS485.</strong> Text Processing with Neural Networks</p>
+            <p class="coursename"><strong>ECON201.</strong> Intermediate Microeconomics</p>
+            <p class="coursename"><strong>ECON320.</strong> Econometrics</p>
+            <p class="coursename"><strong>ECON333.</strong> Financial Economics</p>
           </div>
 
-          <div class="course-fall23">
+          <div class="Courses">
             <h5 class="course-title">Fall 2023</h5>
             <p class="coursename"><strong>CS255.</strong> Computer Architecture/Machine Level Programming</p>
             <p class="coursename"><strong>CS325.</strong> Artificial Intelligence</p>
@@ -106,7 +115,7 @@
             <p class="coursename"><strong>ECON220.</strong> Probability and Statistics for Economists</p>
           </div>
 
-          <div class="course-spring23">
+          <div class="Courses">
             <h5 class="course-title">Spring 2023</h5>
             <p class="coursename"><strong>CS377.</strong> Database Systems</p>
             <p class="coursename"><strong>AAS303.</strong> Black Music</p>
@@ -118,7 +127,7 @@
   
           
 
-          <div class="course-fall22">
+          <div class="Courses">
             <h5 class="course-title">Fall 2022</h5>
             <p class="coursename"><strong>CS326.</strong> Analysis of Algorithms</p>
             <p class="coursename"><strong>CS334.</strong> Machine Learning</p>
@@ -128,7 +137,7 @@
             <p class="coursename"><strong><i>[TA]</i> CS224.</strong> Discrete Mathematics for CS</p>
           </div>
   
-          <div class="course-spring22">
+          <div class="Courses">
             <h5 class="course-title">Spring 2022</h5>
             <p class="coursename"><strong>CS224.</strong> Discrete Mathematics for CS</p>
             <p class="coursename"><strong>CS253.</strong> Data Structures and Algorithms</p>
@@ -140,7 +149,7 @@
 
 
 
-            <div class="course-fall21">
+            <div class="Courses">
               <h5 class="course-title">Fall 2021</h5>
               
               <p class="coursename"><strong>CS171.</strong> Introduction to Computer Science II</p>
