--- a/projects.html
+++ b/projects.html
@@ -80,6 +80,11 @@
       <div class="container">
 
         <div class="row">
+          <div class="course-spring24">
+            <h5 class="course-title">2024</h5>
+            <p class="coursename"><a href="https://github.com/rexzhang123/FormAI"><u>FormAI: AI Enhanced Sports Coach</u></a></p>
+
+          </div>
 
 
           <div class="course-fall23">
