--- a/projects.html
+++ b/projects.html
@@ -80,14 +80,14 @@
       <div class="container">
 
         <div class="row">
-          <div class="course-spring24">
+          <div class="Courses">
             <h5 class="course-title">2024</h5>
             <p class="coursename"><a href="https://github.com/rexzhang123/FormAI"><u>FormAI: AI Enhanced Sports Coach</u></a></p>
 
           </div>
 
 
-          <div class="course-fall23">
+          <div class="Courses">
             <h5 class="course-title">2023</h5>
             <p class="coursename"><a href="https://github.com/rexzhang123/GPT4-Text-Enhancer"><u>GPT4-Powered Writing Wizard</u></a></p>
             <p class="coursename"><a href="https://github.com/rexzhang123/Synthetic_Data_Generation"><u>Synthetic Data Generation for LLM Training</u></a></p>
@@ -96,7 +96,7 @@
             <p class="coursename"><a href="https://github.com/rexzhang123/Weelrn"><u>Weelrn Google Classroom API</u></a></p>
           </div>
 
-          <div class="course-spring23">
+          <div class="Courses">
             <h5 class="course-title">2022</h5>
             <p class="coursename"><a href="https://github.com/rexzhang123/Mushroom-Prediction"><u>Machine Learning for Mushroom Edibility Prediction</u></a></p>
             <p class="coursename"><a href="https://github.com/rexzhang123/NUS_Monkeypox"><u>Sentiment Analysis on the Novel Monkeypox Outbreak</u></a></p>
@@ -104,7 +104,7 @@
           </div>
 
 
-          <div class="course-fall21">
+          <div class="Courses">
               <h5 class="course-title">2021</h5>
               <p class="coursename"><a href="https://github.com/rexzhang123/Trie-Implementation-AutoComplete"><u>Search Bar with Autocomplete Search Suggestions</u></a></p>
               <p class="coursename"><a href="https://github.com/rexzhang123/Blackjack"><u>Game of Blackjack</u></a></p>
