added new changes

--- a/contact.html
+++ b/contact.html
@@ -155,11 +155,9 @@
     <h3>Yuxi (Rex) Zhang</h3>
     <p>Feel free to click on the icons below to get in touch with me.</p>
     <div class="social-links">
-      <a href="https://twitter.com/RexYuxi" class="twitter"><i class="iconify" data-icon="ant-design:twitter-outlined"></i></a>
-      <a href="https://www.facebook.com/rex.zhang.90834" class="facebook"><i class="iconify" data-icon="brandico:facebook-rect"></i></a>
-      <a href="https://www.instagram.com/r.e.x_z/" class="instagram"><i class="iconify" data-icon="akar-icons:instagram-fill"></i></a>
       <a href="mailto: rex.zhang@emory.edu" class="google-plus"><i class="iconify" data-icon="mdi:gmail"></i></a>
       <a href="https://www.linkedin.com/in/rexzhang123/" class="linkedin"><i class="iconify" data-icon="bx:bxl-linkedin"></i></a>
+      <a href="https://github.com/rexzhang123" class="github"><i class="iconify" data-icon="mdi:github"></i></a>
 
     </div>
     <div class="copyright">
