--- a/courses.html
+++ b/courses.html
@@ -86,15 +86,22 @@
             <i>[TA]</i> represents courses for which I was a Teaching Assistant for.
           </p>
 
-          <!-- <div class="Courses">
+          <div class="Courses">
+            <h5 class="course-title">Spring 2025</h5>
+            <p class="coursename"><strong>CS350</strong> Systems Programming</p>
+            <p class="coursename"><strong>ECON425.</strong> Mathematical Economics</p>
+            <p class="coursename"><strong>SPAN102</strong> Spanish II</p>
+
+          </div>
+
+          <div class="Courses">
             <h5 class="course-title">Fall 2024</h5>
-            <p class="coursename"><strong>.</strong> AI Entrepreneurship</p>
-            <p class="coursename"><strong>CS370.</strong> Computer Science Practicum</p>
+            <p class="coursename"><strong>CS371W</strong> AI Research</p>
             <p class="coursename"><strong>CS470.</strong> Data Mining</p>
-            <p class="coursename"><strong>ECON201.</strong> Intermediate Microeconomics</p>
-            <p class="coursename"><strong>ECON320.</strong> Econometrics</p>
-            <p class="coursename"><strong>ECON333.</strong> Financial Economics</p>
-          </div> -->
+            <p class="coursename"><strong>ECON221.</strong> Intermediate Macroeconomics</p>
+            <p class="coursename"><strong>ECON431.</strong> International Trade</p>
+            <p class="coursename"><strong>SPAN101.</strong> Spanish I</p>
+          </div>
 
           <div class="Courses">
             <h5 class="course-title">Spring 2024</h5>
@@ -142,7 +149,7 @@
             <p class="coursename"><strong>CS224.</strong> Discrete Mathematics for CS</p>
             <p class="coursename"><strong>CS253.</strong> Data Structures and Algorithms</p>
             <p class="coursename"><strong>CPLT101.</strong> Rhetorical Composition/Critical Reading</p>
-            <p class="coursename"><strong>MATH190.</strong> Freshman Seminar: Math</p>
+            <p class="coursename"><strong>MATH190.</strong> Freshman Seminar: Move Your Math</p>
             <p class="coursename"><strong>QTM110.</strong> Introduction to Scentific Methods</p>
             <p class="coursename"><strong>QTM150.</strong> Introduction to Statistical Computing I</p>
           </div>
@@ -151,13 +158,11 @@
 
             <div class="Courses">
               <h5 class="course-title">Fall 2021</h5>
-              
               <p class="coursename"><strong>CS171.</strong> Introduction to Computer Science II</p>
               <p class="coursename"><strong>MATH221.</strong>  Linear Algebra</p>
               <p class="coursename"><strong>CHEM202Z.</strong> Principles of Reactivity (Organic Chemistry)</p>
               <p class="coursename"><strong>CHEM202ZL.</strong>  Principles of Reactivity Lab</p>
               <p class="coursename"><strong>ECON101.</strong> Principles of Microeconomics</p>
-
             </div>
           
         </div>
@@ -172,11 +177,9 @@
     <h3>Yuxi (Rex) Zhang</h3>
     <p>Feel free to click on the icons below to get in touch with me.</p>
     <div class="social-links">
-      <a href="https://twitter.com/RexYuxi" class="twitter"><i class="iconify" data-icon="ant-design:twitter-outlined"></i></a>
-      <a href="https://www.facebook.com/rex.zhang.90834" class="facebook"><i class="iconify" data-icon="brandico:facebook-rect"></i></a>
-      <a href="https://www.instagram.com/r.e.x_z/" class="instagram"><i class="iconify" data-icon="akar-icons:instagram-fill"></i></a>
       <a href="mailto: rex.zhang@emory.edu" class="google-plus"><i class="iconify" data-icon="mdi:gmail"></i></a>
       <a href="https://www.linkedin.com/in/rexzhang123/" class="linkedin"><i class="iconify" data-icon="bx:bxl-linkedin"></i></a>
+      <a href="https://github.com/rexzhang123" class="github"><i class="iconify" data-icon="mdi:github"></i></a>
 
     </div>
     <div class="copyright">
