--- a/index.html
+++ b/index.html
@@ -78,33 +78,42 @@
 
             <h1 class="AboutMe">About Me</h1>
 
-
-
             <p>
-              My name is Rex Zhang and I'm a third-year undergraduate student at Emory University 
-              double-majoring in Computer Science and Economics/Mathematics. During my time at Emory so far, 
-              I've been active in many student organizations. Most notably, I co-founded TAMID Group Technology Consulting Track at 
-              Emory dedicated to supporting Israeli Tech startups. Currently, I am engaged in the BrainGB project, led by Dr. Carl Yang, 
-              which explores brain neural networks. For Summer 2024, I will be joining Deutsche Bank at their Cary, NC office as a Technology Analyst Intern.
+              My name is Yuxi (Rex) Zhang, and I’m a fourth-year undergraduate student at Emory University, 
+              majoring in Computer Science, Economics, and Mathematics. 
             </p>
+
+            <p></p>
+              I co-founded TAMID tech consulting at Emory, which supports international tech startups, and led the planning and development of a 
+              <a id="indexDecision" href="https://covid19.emory.edu/decision-aid/about">COVID-19 decision aid </a>. Additionally, I served as the liaison officer for the Student Alumni Board, often representing the student body
+               at high-profile events at Atlanta. 
+               In Summer 2024, I joined Deutsche Bank at their Cary, NC office as a Software Engineering Intern.
+            </p>
+            <style>
+              #indexDecision {
+                  text-decoration: underline;
+              }
+          </style>
 
             <p>
               In my past courses and projects, I've had experience with: 
             </p>
             <ul>
               
-              <li><span class="iconify" data-icon="carbon:skill-level-advanced" style="color: dodgerblue;" data-width="19" data-height="19"></span> &nbsp; Python(Numpy, Pandas, Seaborn, Sklearn), Java, SQL, HTML/CSS, LateX</li>
-              <li><span class="iconify" data-icon="carbon:skill-level-intermediate" style="color: dodgerblue;" data-width="19" data-height="19"></span> &nbsp; JavaScript, React.js, Google Cloud, C, JDBC, R</li>
-              <li><span class="iconify" data-icon="carbon:skill-level-basic" style="color: dodgerblue;" data-width="19" data-height="19"></span> &nbsp; TypeScript </li>
+              <li><span class="iconify" data-icon="carbon:skill-level-advanced" style="color: dodgerblue;" data-width="19" data-height="19"></span> &nbsp; Python, Java, SQL, HTML/CSS, Git, Flask, Google Cloud, Unit Testing, REST API</li>
+              <li><span class="iconify" data-icon="carbon:skill-level-intermediate" style="color: dodgerblue;" data-width="19" data-height="19"></span> &nbsp; C, JavaScript, React.js, Spring Boot, Kubernetes, JDBC, R</li>
+              <li><span class="iconify" data-icon="carbon:skill-level-basic" style="color: dodgerblue;" data-width="19" data-height="19"></span> &nbsp; TypeScript, Swift</li>
             </ul>
 
             <p>
-              In my free time, I enjoy traveling, lifting weights, playing the piano, and editing photos and videos.
+              I'm a firm believer of maintaining an open-minded and positive outlook, both personally and professionally. 
+              You might find me speed rapping casually, experimenting with new recipes in the kitchen, or pushing my limits with calisthenics.
+               I enjoy recording the bits and pieces of my life and have developed a passion for video editing. And when I want to give back, I love participating in international volunteering projects.
             </p>
         
             <p>
-              I'm looking to connect with anyone who's passionate about technology or shares similar hobbies with me. Feel free to click the button below to see 
-              some of my past projects and please don’t hesitate to get in touch through my social media down at the bottom.
+              Let's connect! I'm looking to connect with anyone from any background imaginable!! 
+              Feel free to scroll down to reach out!
             </p>
             <p>
 
@@ -138,11 +147,9 @@
       <h3>Yuxi (Rex) Zhang</h3>
       <p>Feel free to click on the icons below to get in touch with me.</p>
       <div class="social-links">
-        <a href="https://twitter.com/RexYuxi" class="twitter"><i class="iconify" data-icon="ant-design:twitter-outlined"></i></a>
-        <a href="https://www.facebook.com/rex.zhang.90834" class="facebook"><i class="iconify" data-icon="brandico:facebook-rect"></i></a>
-        <a href="https://www.instagram.com/r.e.x_z/" class="instagram"><i class="iconify" data-icon="akar-icons:instagram-fill"></i></a>
         <a href="mailto: rex.zhang@emory.edu" class="google-plus"><i class="iconify" data-icon="mdi:gmail"></i></a>
         <a href="https://www.linkedin.com/in/rexzhang123/" class="linkedin"><i class="iconify" data-icon="bx:bxl-linkedin"></i></a>
+        <a href="https://github.com/rexzhang123" class="github"><i class="iconify" data-icon="mdi:github"></i></a>
 
       </div>
       <div class="copyright">
