--- a/projects.html
+++ b/projects.html
@@ -82,6 +82,7 @@
         <div class="row">
           <div class="Courses">
             <h5 class="course-title">2024</h5>
+            <p class="coursename"><a href="ESG.html"><u>GenAI Powered ESG Visulization and Analysis</u></a></p>
             <p class="coursename"><a href="https://github.com/rexzhang123/FormAI"><u>FormAI: AI Enhanced Sports Coach</u></a></p>
 
           </div>
@@ -89,11 +90,11 @@
 
           <div class="Courses">
             <h5 class="course-title">2023</h5>
-            <p class="coursename"><a href="https://github.com/rexzhang123/GPT4-Text-Enhancer"><u>GPT4-Powered Writing Wizard</u></a></p>
+            <p class="coursename"><a href="https://github.com/rexzhang123/GPT4-Text-Enhancer"><u>GPT4-Powered Writing Assistant</u></a></p>
             <p class="coursename"><a href="https://github.com/rexzhang123/Synthetic_Data_Generation"><u>Synthetic Data Generation for LLM Training</u></a></p>
-            <p class="coursename"><a href="https://github.com/rexzhang123/CoD_OpenAI"><u>Chain of Density Prompting with OpenAI API</u></a></p>
+            <p class="coursename"><a href="https://github.com/rexzhang123/CoD_OpenAI"><u>SOTA Chain of Density Prompting Implmentation with OpenAI API</u></a></p>
             <p class="coursename"><a href="https://covid19.emory.edu/decision-aid/about"><u>COVID-19 Vaccine Decision Aid</u></a></p>
-            <p class="coursename"><a href="https://github.com/rexzhang123/Weelrn"><u>Weelrn Google Classroom API</u></a></p>
+            <p class="coursename"><a href="https://github.com/rexzhang123/Weelrn"><u>Weelrn Google Classroom API </u></a></p>
           </div>
 
           <div class="Courses">
@@ -125,11 +126,9 @@
     <h3>Yuxi (Rex) Zhang</h3>
     <p>Feel free to click on the icons below to get in touch with me.</p>
     <div class="social-links">
-      <a href="https://twitter.com/RexYuxi" class="twitter"><i class="iconify" data-icon="ant-design:twitter-outlined"></i></a>
-      <a href="https://www.facebook.com/rex.zhang.90834" class="facebook"><i class="iconify" data-icon="brandico:facebook-rect"></i></a>
-      <a href="https://www.instagram.com/r.e.x_z/" class="instagram"><i class="iconify" data-icon="akar-icons:instagram-fill"></i></a>
       <a href="mailto: rex.zhang@emory.edu" class="google-plus"><i class="iconify" data-icon="mdi:gmail"></i></a>
       <a href="https://www.linkedin.com/in/rexzhang123/" class="linkedin"><i class="iconify" data-icon="bx:bxl-linkedin"></i></a>
+      <a href="https://github.com/rexzhang123" class="github"><i class="iconify" data-icon="mdi:github"></i></a>
 
     </div>
     <div class="copyright">
